--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<!DOCTYPE html>
+<html>
+      <head>
+              <meta http-equiv="refresh" content="https://github.com/Don-cloud" />
+                </head>
+                  <body>
+                          <p>Please follow <a href="https://github.com/Don-cloud">this link</a>.</p>
+                            </body>
+</html>
