--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
       <head>
-              <meta http-equiv="refresh" content="https://github.com/Don-cloud" />
+              <title>sajal on GitHub</title>
                 </head>
                   <body>
-                          <p>Please follow <a href="https://github.com/Don-cloud">this link</a>.</p>
-                            </body>
+                          <script>
+      let url = "https://github.com/Don-cloud";
+      window.location.href = url;
+    </script>
+      </body>
 </html>
